--- a/ratelimitj-redis/build.gradle
+++ b/ratelimitj-redis/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     )
 
     testCompile(
-            project(':ratelimitj-internal:test'),
+            project(':ratelimitj-test'),
             libraries.assertj,
             libraries.guava,
             libraries.mockito,
