--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
   - chmod +x gradlew
   
 script:
-  - ./gradlew check
+  - ./gradlew check --parallel
   - ./gradlew codeCoverageReport
 
 notifications:
