Fix for test coverage exclusion

--- a/ratelimitj-test/build.gradle
+++ b/ratelimitj-test/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 //        sourceDirectories = files(sourceSets.main.allSource.srcDirs)
         afterEvaluate {
             classDirectories = files(classDirectories.files.collect {
-                fileTree(dir: it, exclude: 'es/mokie/ratelimitj/test')
+                fileTree(dir: it, exclude: 'es/moki/ratelimitj/test')
             })
         }
     }
