--- a/build.gradle
+++ b/build.gradle
@@ -170,6 +170,12 @@ task codeCoverageReport(type: JacocoReport) {
         html.enabled false
         csv.enabled false
     }
+
+    afterEvaluate {
+        classDirectories = files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: 'es/moki/ratelimitj/test')
+        })
+    }
 }
 
 codeCoverageReport.dependsOn {
