exclude non released modules from code coverage

--- a/build.gradle
+++ b/build.gradle
@@ -173,7 +173,7 @@ task codeCoverageReport(type: JacocoReport) {
 
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: 'es/moki/ratelimitj/test')
+            fileTree(dir: it, exclude: ['es/moki/ratelimitj/test', 'es/moki/ratelimitj/inmemory', 'es/moki/ratelimitj/hazelcast'])
         })
     }
 }
