--- a/ratelimitj-dropwizard/build.gradle
+++ b/ratelimitj-dropwizard/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 
     testImplementation(
             project(':ratelimitj-redis'),
+            project(':ratelimitj-inmemory'),
             project(':ratelimitj-test'),
             "io.dropwizard:dropwizard-testing:${dropWizardVersion}",
             'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-grizzly2:2.25.1',
