update version to 0.4.0.M1

--- a/build.gradle
+++ b/build.gradle
@@ -98,7 +98,7 @@ configure([project(':ratelimitj-redis'), project(':ratelimitj-inmemory'), projec
     apply plugin: 'maven'
 
     project.group = 'es.moki.ratelimitj'
-    project.version = '0.4.0'
+    project.version = '0.4.0.M1'
 
     // OSSRH publication
     if (ossrhUser != "") {
