--- a/build.gradle
+++ b/build.gradle
@@ -53,9 +53,9 @@ subprojects {
         toolVersion = '7.8.1'
     } 
 
-    ext.junitVintageVersion = '4.12.0-M5'
-    ext.junitPlatformVersion = '1.0.0-M5'
-    ext.junitJupiterVersion = '5.0.0-M5'
+    ext.junitVintageVersion = '4.12.0-RC2'
+    ext.junitPlatformVersion = '1.0.0-RC2'
+    ext.junitJupiterVersion = '5.0.0-RC2'
 
     ext.libraries = [
             slf4j   : 'org.slf4j:slf4j-api:1.7.25',
