--- a/build.gradle
+++ b/build.gradle
@@ -93,7 +93,7 @@ configure([project(':ratelimitj-redis'), project(':ratelimitj-inmemory'), projec
     apply plugin: 'maven'
 
     project.group = 'es.moki.ratelimitj'
-    project.version = '0.4.0.M2'
+    project.version = '0.4.0'
 
     // OSSRH publication
     if (ossrhUser != "") {
