upgrade to lettuce-core 5.0.0.RELEASE

--- a/ratelimitj-redis/build.gradle
+++ b/ratelimitj-redis/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     )
 
     api(
-            'io.lettuce:lettuce-core:5.0.0.RC1'
+            'io.lettuce:lettuce-core:5.0.0.RELEASE'
     )
 
     testCompile(
