--- a/build.gradle
+++ b/build.gradle
@@ -52,9 +52,9 @@ subprojects {
         toolVersion = '8.1'
     } 
 
-    ext.junitVintageVersion = '4.12.0-M5'
-    ext.junitPlatformVersion = '1.0.0-M5'
-    ext.junitJupiterVersion = '5.0.0-M5'
+    ext.junitVintageVersion = '4.12.1'
+    ext.junitPlatformVersion = '1.0.1'
+    ext.junitJupiterVersion = '5.0.1'
 
     ext.libraries = [
             slf4j   : 'org.slf4j:slf4j-api:1.7.25',
