--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,16 @@ buildscript {
         maven { url "http://repo.spring.io/release" }
         jcenter()
     }
+    dependencies {
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.1'
+    }
 }
 
 plugins {
     id 'com.gradle.build-scan' version '1.8'
 }
 
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 defaultTasks 'check'
 
@@ -36,6 +40,16 @@ allprojects {
     apply plugin: 'jacoco'
 
     sourceCompatibility = 1.8
+
+    junitPlatform {
+        platformVersion '1.0.0'
+    }
+
+    dependencies {
+        testCompile('org.junit.jupiter:junit-jupiter-api:5.0.1')
+        testRuntime('org.junit.jupiter:junit-jupiter-engine:5.0.1')
+    }
+
 }
 
 subprojects {
@@ -50,21 +64,16 @@ subprojects {
     checkstyle {
         configFile = rootProject.file('gradle/config/checkstyle/checkstyle.xml')
         toolVersion = '8.1'
-    } 
-
-    ext.junitVintageVersion = '4.12.1'
-    ext.junitPlatformVersion = '1.0.1'
-    ext.junitJupiterVersion = '5.0.1'
-
+    }
     ext.libraries = [
             slf4j   : 'org.slf4j:slf4j-api:1.7.25',
             assertj : 'org.assertj:assertj-core:3.8.0',
-            junit   : "org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion",
             mockito : 'org.mockito:mockito-core:2.8.47',
             guava   : 'com.google.guava:guava:22.0',
             logback : 'ch.qos.logback:logback-classic:1.2.3',
             findbugs: 'com.google.code.findbugs:jsr305:3.0.2'
     ]
+
 }
 
 subprojects {
