--- a/ratelimitj-hazelcast/build.gradle
+++ b/ratelimitj-hazelcast/build.gradle
@@ -2,10 +2,13 @@ description 'RateLimitJ Hazelcast'
 
 dependencies {
 
-    implementation(
+    api(
             project(':ratelimitj-core'),
-            project(':ratelimitj-inmemory'),
             'com.hazelcast:hazelcast:3.8.6',
+    )
+    
+    implementation(
+            project(':ratelimitj-inmemory'),
             libraries.slf4j,
             libraries.findbugs
     )
