--- a/ratelimitj-inmemory/build.gradle
+++ b/ratelimitj-inmemory/build.gradle
@@ -4,8 +4,11 @@ project.ext.release = true
 
 dependencies {
 
-    implementation(
+    api(
             project(':ratelimitj-core'),
+    )
+
+    implementation(
             libraries.slf4j,
             'net.jodah:expiringmap:0.5.8',
             'de.jkeylockmanager:jkeylockmanager:2.1.0',
