--- a/ratelimitj-core/build.gradle
+++ b/ratelimitj-core/build.gradle
@@ -5,7 +5,7 @@ project.ext.release = true
 dependencies {
 
     api(
-            'io.projectreactor:reactor-core:3.1.0.M3',
+            'io.projectreactor:reactor-core:3.1.0.RELEASE',
     )
 
     implementation(
