--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ subprojects {
     sourceCompatibility = 1.8
     
     apply plugin: 'pmd'
-//    apply plugin: 'findbugs'
+    apply plugin: 'findbugs'
     apply plugin: 'checkstyle'
     apply plugin: 'maven-publish'
     apply plugin: 'maven'
@@ -42,6 +42,14 @@ subprojects {
         configFile = rootProject.file('gradle/config/checkstyle/checkstyle.xml')
         toolVersion = '8.1'
     }
+
+    tasks.withType(FindBugs) {
+        reports {
+            xml.enabled = false
+            html.enabled = true
+        }
+    }
+    
     ext.libraries = [
             slf4j   : 'org.slf4j:slf4j-api:1.7.25',
             assertj : 'org.assertj:assertj-core:3.8.0',
