--- a/build.gradle
+++ b/build.gradle
@@ -114,7 +114,7 @@ configure([project(':ratelimitj-redis'), project(':ratelimitj-inmemory'), projec
     apply plugin: 'maven'
 
     project.group = 'es.moki.ratelimitj'
-    project.version = '0.5.0'
+    project.version = '0.4.1'
 
     // OSSRH publication
     if (ossrhUser != "") {
@@ -204,7 +204,7 @@ codeCoverageReport.dependsOn {
 }
 
 // http://nemerosa.ghost.io/2015/07/01/publishing-to-the-maven-central-using-gradle/
-// ./gradlew uploadArchives closeAndPromoteRepository
+// ./gradlew uploadArchives
 
 
 
