Travis CI tweaks

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,20 @@ jdk:
   - openjdk8
   - openjdk9
 
+matrix:
+  include:
+# 8
+    - env: JDK='Oracle JDK 8'
+      jdk: oraclejdk8
+    - env: JDK='OpenJDK 8'
+      jdk: openjdk8
+# 9
+    - env: JDK='Oracle JDK 9'
+      jdk: oraclejdk9
+# 10
+    - env: JDK='Oracle JDK 10'
+      jdk: oraclejdk10
+
 #addons:
 #  apt:
 #    packages:
@@ -21,6 +35,7 @@ before_script:
   - chmod +x gradlew
   
 script:
+  - java -version
   - ./gradlew check --parallel
   - ./gradlew codeCoverageReport
 
