Gracefully reloads Redis Script if 'NOSCRIPT No matching script' error returned from Redis
This error can occur if the Redis instance in bounced or the 'SCRIPT FLUSH' operation is called

--- a/build.gradle
+++ b/build.gradle
@@ -61,11 +61,16 @@ subprojects {
     }
 
     dependencies {
-        testCompile("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
-        testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
 
-        testCompile("junit:junit:4.12")
-        testRuntime("org.junit.vintage:junit-vintage-engine:4.12.0")
+        test.useJUnitPlatform()
+
+//        testRuntime("org.junit.platform:junit-platform-launcher:1.2.0")
+//        testCompile("junit:junit:4.12")
+//        testRuntime("org.junit.vintage:junit-vintage-engine:4.12.0")
+//        testRuntimeOnly "org.junit.vintage:junit-vintage-engine:4.12.0"
+
+        testImplementation "org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion"
+        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion"
 
         // To avoid compiler warnings about @API annotations in JUnit code
        	testCompileOnly('org.apiguardian:apiguardian-api:1.0.0')
