disabled travis.ci JDKs

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: java
-jdk:
-  - oraclejdk8
-  - oraclejdk9
-  - openjdk8
+#jdk:
+#  - oraclejdk8
+#  - oraclejdk9
+#  - openjdk8
 
 matrix:
   include:
