--- a/ratelimitj-redis/build.gradle
+++ b/ratelimitj-redis/build.gradle
@@ -21,7 +21,8 @@ dependencies {
             libraries.guava,
             libraries.mockito,
             libraries.logback,
-            "org.junit.jupiter:junit-jupiter-params:$junitJupiterVersion"
+            "org.junit.jupiter:junit-jupiter-params:$junitJupiterVersion",
+//            'org.awaitility:awaitility:3.1.2'
     )
 
 }
