--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language: java
 
 jdk:
  - oraclejdk8
- - oraclejdk9
- - openjdk8
- - openjdk9
- - openjdk10
- - openjdk11
+# - oraclejdk9
+# - openjdk8
+# - openjdk9
+# - openjdk10
+# - openjdk11
 
 sudo: required
 
