--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: java
 
 jdk:
- - oraclejdk8
-# - oraclejdk9
-# - openjdk8
-# - openjdk9
-# - openjdk10
-# - openjdk11
+ - openjdk8
+ - openjdk9
+ - openjdk10
+ - openjdk11
 
 sudo: required
 
