Upgrade to gradle 6.0.1

--- a/build.gradle
+++ b/build.gradle
@@ -205,9 +205,9 @@ task codeCoverageReport(type: JacocoReport) {
     }
 
     afterEvaluate {
-        classDirectories = files(classDirectories.files.collect {
+        getClassDirectories().from(files(classDirectories.files.collect {
             fileTree(dir: it, exclude: ['es/moki/ratelimitj/test', 'es/moki/ratelimitj/inmemory', 'es/moki/ratelimitj/hazelcast'])
-        })
+        }))
     }
 }
 
