--- a/ratelimitj-inmemory/build.gradle
+++ b/ratelimitj-inmemory/build.gradle
@@ -12,7 +12,10 @@ dependencies {
             libraries.slf4j,
             'net.jodah:expiringmap:0.5.8',
             'de.jkeylockmanager:jkeylockmanager:2.1.0',
-            libraries.findbugs
+    )
+
+    compileOnly(
+            libraries.jsr305,
     )
 
     testImplementation(
