--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
 
 plugins {
     id "com.avast.gradle.docker-compose" version "0.10.4"
-    id "net.ltgt.errorprone" version "1.1.1"
+    id "net.ltgt.errorprone" version "1.1.1" apply false
 }
 
 
@@ -41,6 +41,7 @@ subprojects {
 
     dependencies {
         errorprone("com.google.errorprone:error_prone_core:2.3.4")
+        errorproneJavac("com.google.errorprone:javac:9+181-r4173-1")
     }
     
     pmd {
