--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,5 @@ include 'ratelimitj-inmemory'
 include 'ratelimitj-dropwizard'
 include 'ratelimitj-test'
 include 'ratelimitj-examples'
+include 'ratelimitj-aerospike'
 
